--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pt.uab</groupId>
     <artifactId>distmeter-slave</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -53,6 +53,7 @@
         </plugins>
     </build>
 
+
     <dependencies>
 
         <dependency>
@@ -66,6 +67,28 @@
             <artifactId>commons-exec</artifactId>
             <version>1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.rapidoid</groupId>
+            <artifactId>rapidoid-quick</artifactId>
+            <version>5.5.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
+        <!--
+        <dependency>
+            <groupId>pt.uab</groupId>
+            <artifactId>distmeter-common</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/distmeter-common-1.0.jar</systemPath>
+        </dependency>
+        -->
 
     </dependencies>
 
